--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@ionic-native/splash-screen": "3.10.2",
         "@ionic-native/status-bar": "3.10.2",
         "@ionic/storage": "2.0.1",
+        "@ngrx/core": "^1.2.0",
+        "@ngrx/store": "^2.2.2",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "^1.0.5",
