--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "4.1.2",
         "@angular/platform-browser-dynamic": "4.1.2",
         "@ionic-native/core": "3.10.2",
+        "@ionic-native/speech-recognition": "^3.12.1",
         "@ionic-native/splash-screen": "3.10.2",
         "@ionic-native/status-bar": "3.10.2",
         "@ionic/storage": "2.0.1",
@@ -28,9 +29,9 @@
         "@ngrx/store": "^2.2.2",
         "angular-linky": "^1.2.2",
         "cordova-android": "^6.2.3",
-        "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-speechrecognition": "^1.1.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -55,11 +56,11 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-speechrecognition": {}
         },
         "platforms": [
-            "android",
-            "ios"
+            "android"
         ]
     }
 }
