--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "dotenv": "^4.0.0",
         "ionic-angular": "3.3.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -65,5 +66,8 @@
         "platforms": [
             "android"
         ]
+    },
+    "config": {
+        "ionic_webpack": "./webpack.config.js"
     }
 }
